# libnice

./: .gitignore  configure.ac
agent/: Makefile.am  agent.c  agent.h  component.c  conncheck.c  discovery.c  interfaces.c  stream.c
debian/: changelog  control  gstreamer1.5-kmsnice.install  libkmsnice-dev.install  libkmsnice-doc.install  libkmsnice.install  libnice0.1.10-dev.install  libnice0.1.10-doc.install  libnice15-0.1.10.install  rules
docs/reference/libnice/: Makefile.am  libkmsnice-docs.xml
gst/: Makefile.am  gstnicesrc.c
nice/: Makefile.am  kmsnice.pc.in  libnice.sym  nice0.1.10.pc.in
socket/: udp-bsd.c
